# desktop_temp_notif

./: .gitignore  CLAUDE.md  CMakeLists.txt  DesktopTempNotif.slnx  README.md  config.linux.conf  config.windows.conf  data.json  desktop_temp_notif.sln  sensors_data.md
.github/workflows/: release.yml
platform/linux/: linux_notifier.cpp  linux_notifier.hpp  linux_sensor_reader.cpp  linux_sensor_reader.hpp
platform/windows/: DesktopNotificationManagerCompat.cpp  DesktopNotificationManagerCompat.h  notification_activator.hpp  windows_notifier.cpp  windows_notifier.hpp  windows_sensor_reader.cpp  windows_sensor_reader.hpp
platform/windows/CSharp/: .gitignore  Config.cs  DesktopTempNotif.csproj  Notifier.cs  Program.cs  SensorReader.cs
src/: config.cpp  config.hpp  main.cpp  notifier.hpp  sensor_reader.hpp
